Kubernetes/Longhorn/longhorn-ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-longhorn-headers
  namespace: longhorn-system
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress-http
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd 
spec:
  rules:
  - host: hsh-longhorn.legendars.de
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: longhorn-frontend
            port: 
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"    
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-svc-longhorn-headers@kubernetescrd
spec:
  rules:
  - host: hsh-longhorn.legendars.de
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port: 
              number: 80
  tls: 
  - hosts:
    - hsh-longhorn.legendars.de
    secretName: longhorn-tls
